scripts/e2e/cmd/runner/testdata/networking-v1/one-namespace-one-ingress/path-type/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catch-all
spec:
  selector:
    matchLabels:
      app: catch-all
  replicas: 1
  template:
    metadata:
      labels:
        app: catch-all
    spec:
      containers:
        - name: catch-all
          imagePullPolicy: Always
          image: gcr.io/kuar-demo/kuard-amd64:blue
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: catch-all
spec:
  selector:
    app: catch-all
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: should-get-request
spec:
  selector:
    matchLabels:
      app: should-get-request
  replicas: 1
  template:
    metadata:
      labels:
        app: should-get-request
    spec:
      containers:
        - name: should-get-request
          imagePullPolicy: Always
          image: gcr.io/kuar-demo/kuard-amd64:green
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: should-get-request
spec:
  selector:
    app: should-get-request
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: catch-all
                port:
                  number: 80
            pathType: Prefix
          - path: /prefix
            backend:
              service:
                name: should-get-request
                port:
                  number: 80
            pathType: Prefix
          - path: /prefix*
            backend:
              service:
                name: should-get-request
                port:
                  number: 80
            pathType: Prefix
          - path: /exact
            backend:
              service:
                name: should-get-request
                port:
                  number: 80
            pathType: Exact
          - path: /exact*
            backend:
              service:
                name: should-get-request
                port:
                  number: 80
            pathType: Exact
          - path: /ims
            backend:
              service:
                name: should-get-request
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /ims*
            backend:
              service:
                name: should-get-request
                port:
                  number: 80
            pathType: ImplementationSpecific
